manifests/filebeat.yaml
# Filebeat Configuration
#
# This configuration includes the following k8s resource definitions:
#
# 1) ConfigMap - filebeat settings
# 2) DaemonSet - a filebeat pod per worker node
#
# Filebeat uses kubernetes autodiscovery settings to identify and harvest pod-related logs.
# The data is then sent to logstash for further processing.
---
# DaemonSet Definition
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat
  labels:
    tier: audit
    app: filebeat
spec:
  selector:
    matchLabels:
      tier: audit
      app: filebeat
  template:
    metadata:
      labels:
        tier: audit
        app: filebeat
    spec:
      # filebeat requires direct access to the host filesystem
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      # volumes:
      # /var/lib/docker/containers - container logs 
      # /var/log - syslog logs 
      # /var/lib/filebeat-data - temp data
      # /etc/filebeat.yml - filebeat configuration
      volumes:
      - name: filebeat-config
        configMap:
          defaultMode: 0600
          name: configmap-filebeat
      - name: dockercontainers
        hostPath:
          path: /var/lib/docker/containers/
      - name: varlog
        hostPath:
          path: /var/log
      - name: tempdata
        hostPath:
          path: /var/lib/filebeat-data
          type: DirectoryOrCreate
      containers:
      - name: filebeat
        image: docker.elastic.co/beats/filebeat:7.6.2
        args: ["-c", "/etc/filebeat.yaml", "-e"]
        # environment variables
        securityContext:
          runAsUser: 0
        # volume mounts
        volumeMounts:
        - name: filebeat-config
          mountPath: /etc/filebeat.yaml
          readOnly: true
          subPath: filebeat.yaml
        - name: tempdata
          mountPath: /usr/share/filebeat/data
        - name: dockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: varlog
          mountPath: /var/log
          readOnly: true
        # livenessProbe - filebeat attempts to connect to logstash only once by default
        # the liveness probe ensures that logstash is up and running
        # otherwise the filebeat pod is restarted
        livenessProbe:
          exec:
            command: [
              "sh",
              "-c",
              "curl XGET 'svc-indexing-logstash-api:9600/?pretty'"
            ]
          initialDelaySeconds: 5
          periodSeconds: 10
